New Crowdin updates (#2139)
* New translations: mobile-misc.yaml (Esperanto)

* New translations: mobile-misc.yaml (Swiss German)

* New translations: mobile-misc.yaml (Bulgarian)

--- a/translation/dest/bg-BG/mobile-misc.yaml
+++ b/translation/dest/bg-BG/mobile-misc.yaml
@@ -1,6 +1,6 @@
 bg-BG:
-  apiUnsupported: "Вашата версия на lichess е стара! Моля обновете приложението до последната версия."
-  apiDeprecated: "Подновете безплатно до най-новата версия на Lichess! Поддръжката на сегашната Ви версия ще бъде прекратена на %s."
+  apiUnsupported: "Вашата версия на приложението lichess е остаряла! Надградете безплатно до последната версия."
+  apiDeprecated: "Надградете безплатно до най-новата версия на Lichess! Поддръжката на тази версия ще се прекрати на %s."
   comments: "Коментари"
   gameInformation: "За партията"
   home: "Начало"
@@ -18,8 +18,8 @@ bg-BG:
   landscapeBoardSide: "Разположение на дъската (в хоризонтална позиция)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
   toggleSound: "Вкл./Изкл. звук" #Settings to enable/disable sound
   overTheBoard: "Двама над дъската"
-  sharePgn: "Сподели PGN"
+  sharePgn: "Споделияне на PGN"
   shareGameUrl: 'Сподели URL на партията'
   playOnline: "Играй онлайн"
   playOffline: "Играй офлайн"
-  bgThemeSyncWithSystem: "Синхронизирай със системата" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
+  bgThemeSyncWithSystem: "Синхронизиране със системата" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
