New Crowdin updates (#2153)
* New translations: mobile-misc.yaml (Swedish)

* New translations: mobile-misc.yaml (Thai)

* New translations: mobile-misc.yaml (Swedish)

* New translations: mobile-misc.yaml (Hebrew)

* New translations: mobile-misc.yaml (Uzbek)

* New translations: mobile-misc.yaml (Esperanto)

* New translations: mobile-misc.yaml (Irish)

* New translations: mobile-misc.yaml (Armenian)

* New translations: mobile-misc.yaml (Slovak)

* New translations: mobile-misc.yaml (Turkish)

* New translations: mobile-misc.yaml (Czech)

* New translations: mobile-misc.yaml (Vietnamese)

* New translations: mobile-misc.yaml (Somali)

* New translations: mobile-misc.yaml (Tamil)

* New translations: mobile-misc.yaml (German)

* New translations: mobile-misc.yaml (Dutch)

* New translations: mobile-misc.yaml (Burmese)

* New translations: mobile-misc.yaml (Croatian)

* New translations: mobile-misc.yaml (Vietnamese)

* New translations: mobile-misc.yaml (Hebrew)

* New translations: mobile-misc.yaml (Malay)

* New translations: mobile-misc.yaml (Swahili)

* New translations: mobile-misc.yaml (Hebrew)

* New translations: mobile-misc.yaml (Portuguese)

* New translations: mobile-misc.yaml (Swiss German)

* New translations: mobile-misc.yaml (Afrikaans)

* New translations: mobile-misc.yaml (Tatar)

* New translations: mobile-misc.yaml (Russian)

* New translations: mobile-misc.yaml (Klingon)

* New translations: mobile-misc.yaml (Toki Pona)

* New translations: mobile-misc.yaml (Swahili)

--- a/translation/dest/af-ZA/mobile-misc.yaml
+++ b/translation/dest/af-ZA/mobile-misc.yaml
@@ -1,6 +1,6 @@
 af-ZA:
-  apiUnsupported: "Jou weergawe van lichess-app is te oud! Gradeer asseblief gratis op na die nuutste weergawe."
-  apiDeprecated: "Gradeer gratis op na die nuutste lichess-app! Ondersteuning vir hierdie weergawe sal gedeaktiveer word %s."
+  apiUnsupported: "Jou weergawe van Lichess-app is te oud! Gradeer asseblief gratis op na die nuutste weergawe."
+  apiDeprecated: "Gradeer gratis op na die nuutste Lichess-app! Ondersteuning vir hierdie weergawe sal gedeaktiveer word op %s."
   comments: "Kommentaar"
   gameInformation: "Spel inligting"
   home: "Tuiste"
