--- a/translation/dest/my-MM/mobile-misc.yaml
+++ b/translation/dest/my-MM/mobile-misc.yaml
@@ -1,5 +1,8 @@
 my-MM:
+  apiUnsupported: "သင်၏ Lichess အပလီကေးရှင်းဗားရှင်းသည် ဟောင်းနေပြီ! နောက်ဆုံးပေါ် ဗားရှင်းသို့ အခမဲ့ အဆင့်မြင့်တင်ပါ။"
+  apiDeprecated: "နောက်ဆုံးပေါ် Lichess အပလီကေးရှင်းသို့ အခမဲ့ အဆင့်မြင့်တင်ပါ! ယခုဗားရှင်းသို့ ထောက်ပံ့ခြင်းအား %s တွင် အဆုံးသတ်မည်."
   comments: "မှတ်ချက်"
   gameInformation: "ကစားပွဲ ဆိုင်ရာ အချက်အလက်များ"
   home: "ပင္မစာမ်က္ႏွာ"
   lastScore: "ရမှတ် နောက်ဆုံး အခြေအနေ - %s"
+  playerisInvitingYou: "%s သည် သင့်အား ဖိတ်ခေါ်နေသည်"
