--- a/translation/dest/nl-NL/mobile-misc.yaml
+++ b/translation/dest/nl-NL/mobile-misc.yaml
@@ -2,8 +2,8 @@ nl-NL:
   apiUnsupported: "Uw versie van de Lichess-app is te oud! Gelieve gratis te upgraden naar de nieuwste versie."
   apiDeprecated: "Upgrade gratis naar de nieuwste Lichess-app! Ondersteuning voor deze versie zal ophouden op %s."
   comments: "Reacties"
-  gameInformation: "Game informatie"
-  home: "Home"
+  gameInformation: "Spelinformatie"
+  home: "Startscherm"
   lastScore: "Laatste score: %s"
   playerisInvitingYou: "%s nodigt u uit"
   unsupportedVariant: "Variant %s wordt niet ondersteund in deze versie"
