--- a/translation/dest/sv-SE/mobile-misc.yaml
+++ b/translation/dest/sv-SE/mobile-misc.yaml
@@ -1,9 +1,13 @@
 sv-SE:
   apiUnsupported: "Din version av lichess-appen är för gammal! Var god uppdatera till den senaste versionen."
-  apiDeprecated: "Uppgradera gratis till den senaste lichess appen! Stöd för denna version kommer att sluta den %s."
+  apiDeprecated: "Uppgradera gratis till den senaste Lichess-appen! Stödet för den här versionen kommer att upphöra den %s."
+  comments: "Kommentarer"
+  gameInformation: "Parti-information"
+  home: "Startsida"
+  lastScore: "Senaste resultat: %s"
   playerisInvitingYou: "%s bjuder in dig"
-  unsupportedVariant: "Varianten %s är inte stödd i denna verision"
-  notesSynchronizationHasFailed: "Synkning av anteckningar med lichess har misslyckats, försök igen senare."
+  unsupportedVariant: "Varianten %s är inte stödd i denna version"
+  notesSynchronizationHasFailed: "Synkning av anteckningar med Lichess har misslyckats, försök igen senare."
   vibrateOnGameEvents: "Vibrera vid partihändelser"
   offline: "Frånkopplad"
   otbUseSymmetricPieces: "Använd symmetriska pjäser" #Setting for offline over-the-board games
@@ -18,3 +22,4 @@ sv-SE:
   shareGameUrl: 'Dela parti-URL'
   playOnline: "Spela online"
   playOffline: "Spela offline"
+  bgThemeSyncWithSystem: "Synkronisera med systemet" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
