--- a/translation/dest/de-DE/mobile-misc.yaml
+++ b/translation/dest/de-DE/mobile-misc.yaml
@@ -11,7 +11,7 @@ de-DE:
   vibrateOnGameEvents: "Bei Spielereignissen vibrieren"
   offline: "Offline"
   otbUseSymmetricPieces: "Verwende symmetrische Figuren" #Setting for offline over-the-board games
-  otbFlipPiecesAndInfoAfterMove: "Drehe den Bildschirm nach jedem Zug" #Setting for offline over-the-board games
+  otbFlipPiecesAndInfoAfterMove: "Drehe Figuren und Gegnerinfo nach dem Zug" #Setting for offline over-the-board games
   settingsClockPosition: "Uhrposition" #Determines whether each player's time is shown on the left or right side of the board
   positionRight: "Rechts" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Links" #As in "left-hand side"; not political or past participle
