--- a/translation/dest/gsw-CH/mobile-misc.yaml
+++ b/translation/dest/gsw-CH/mobile-misc.yaml
@@ -8,7 +8,7 @@ gsw-CH:
   playerisInvitingYou: "%s ladet dich i"
   unsupportedVariant: "Variante %s wird in dere Version nöd underschtützt"
   notesSynchronizationHasFailed: "D'Synchronisation vu Amerkige mit Lichess isch fählgschlage, bitte versuechs spöter nomal."
-  vibrateOnGameEvents: "Bi Schpilereignis vibriere"
+  vibrateOnGameEvents: "Bi Schpielereignis vibriere"
   offline: "Offline"
   otbUseSymmetricPieces: "benutz symmetrischi Figure" #Setting for offline over-the-board games
   otbFlipPiecesAndInfoAfterMove: "Figurä und Gegnerinfo nochem Zug flippä" #Setting for offline over-the-board games
@@ -20,6 +20,6 @@ gsw-CH:
   overTheBoard: "Schpill offline gäge en Mänsch"
   sharePgn: "PGN teilä"
   shareGameUrl: 'Partiä-URL teilä'
-  playOnline: "Online schpilä"
-  playOffline: "Offline schpilä"
+  playOnline: "Online schpille"
+  playOffline: "Offline schpille"
   bgThemeSyncWithSystem: "Mit em Syschtem synchronisiere" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
