--- a/translation/dest/pt-PT/mobile-misc.yaml
+++ b/translation/dest/pt-PT/mobile-misc.yaml
@@ -1,6 +1,6 @@
 pt-PT:
-  apiUnsupported: "A tua versão da aplicação do lichess é demasiado antiga! Por favor atualiza-a para a versão mais recente."
-  apiDeprecated: "Atualiza para a aplicação do lichess mais recente! O suporte para esta versão será abandonado a %s."
+  apiUnsupported: "Sua versão do aplicativo lichess é muito antiga! Por favor, atualize gratuitamente para a versão mais recente."
+  apiDeprecated: "Atualize gratuitamente para o mais recente aplicativo no lichess! O suporte para esta versão será disponibilizado em %s."
   comments: "Comentários"
   gameInformation: "Informações do jogo"
   home: "Página inicial"
