--- a/translation/dest/sk-SK/mobile-misc.yaml
+++ b/translation/dest/sk-SK/mobile-misc.yaml
@@ -1,15 +1,23 @@
 sk-SK:
   apiUnsupported: "Verzia Vašej lichess aplikácie je neaktuálna. Aktualizujte si ju na najnovšiu verziu, prosím."
   comments: "Komentáre"
-  gameInformation: "Informácie o partii"
+  gameInformation: "Informácie o hre"
+  home: "Domov"
+  lastScore: "Posledné skóre: %s"
   playerisInvitingYou: "%s Vás pozýva"
   unsupportedVariant: "Variant %s nie je podporovaný v tejto verzií"
+  notesSynchronizationHasFailed: "Synchronizácia poznámok s lichess zlyhala. Prosím skúste neskôr."
+  vibrateOnGameEvents: "Vybrácie"
   offline: "Offline"
   otbUseSymmetricPieces: "Použiť symetrické figúrky" #Setting for offline over-the-board games
   otbFlipPiecesAndInfoAfterMove: "Otočiť figúrky a informácie o súperovi po ťahu" #Setting for offline over-the-board games
   settingsClockPosition: "Umiestnenie hodín" #Determines whether each player's time is shown on the left or right side of the board
   positionRight: "Vpravo" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Vľavo" #As in "left-hand side"; not political or past participle
-  playOnline: "Hrať v režime online"
-  playOffline: "Hrať v režime offline"
+  landscapeBoardSide: "Veľkosť šachovnice (na šírku)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Zvuk" #Settings to enable/disable sound
+  sharePgn: "Zdieľať PGN"
+  shareGameUrl: 'Zdieľať URL hry'
+  playOnline: "Hrať online"
+  playOffline: "Hrať offline"
   bgThemeSyncWithSystem: "Synchronizovať so systémom" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
