--- a/translation/dest/ta-IN/mobile-misc.yaml
+++ b/translation/dest/ta-IN/mobile-misc.yaml
@@ -1,8 +1,13 @@
 ta-IN:
   apiUnsupported: "\nஉங்கள் lichess பயன்பாட்டின் பதிப்பு மிகவும் பழையது! சமீபத்திய பதிப்பிற்கு இலவசமாக மேம்படுத்தவும்"
+  apiDeprecated: "சமீபத்திய lichess பயன்பாட்டிற்கு இலவசமாக மேம்படுத்தவும்! இந்தப் பதிப்பிற்கான ஆதரவு கைவிடப்படும் %s."
   comments: "கருத்துகள்"
   gameInformation: "விளையாட்டு தகவல்"
   home: "Home"
   lastScore: "கடைசி மதிப்பெண்"
   playerisInvitingYou: "உங்களை அழைக்கிறது"
+  unsupportedVariant: "இந்தப் பதிப்பில் மாறுபாடு %s ஆதரிக்கப்படவில்லை"
+  notesSynchronizationHasFailed: "லிச்சஸுடன் குறிப்புகள் ஒத்திசைவு தோல்வியடைந்தது, தயவுசெய்து பின்னர் மீண்டும் முயற்சிக்கவும்."
   vibrateOnGameEvents: "விளையாட்டு நிகழ்வுகளில் அதிர்வுறும்"
+  offline: "ஆஃப்லைன்"
+  otbUseSymmetricPieces: "சமச்சீர் துண்டுகளைப் பயன்படுத்தவும்" #Setting for offline over-the-board games
