--- a/translation/dest/tlh-AA/mobile-misc.yaml
+++ b/translation/dest/tlh-AA/mobile-misc.yaml
@@ -1,2 +1,22 @@
 tlh-AA:
+  apiUnsupported: "notlh lichess nIqHom Segh! Segh ret yISuq (qav'ap tu'lu'be')."
+  apiDeprecated: "lichess niqHom Segh ret yISuq (qav'ap tu'lu'be'). qaSDI' %s Seghvam qotbe'choHlu'."
+  comments: "QInHommey"
+  gameInformation: "Quj De'"
+  home: "juH"
+  lastScore: "mIvwa'mey ret: %s"
+  playerisInvitingYou: "DurIt %s"
+  offline: "lInHa'"
+  otbUseSymmetricPieces: "lIw chItlh" #Setting for offline over-the-board games
+  otbFlipPiecesAndInfoAfterMove: "joppu'DI' lIw ghol De' je jIrmoH" #Setting for offline over-the-board games
+  settingsClockPosition: "tlhaq Daq" #Determines whether each player's time is shown on the left or right side of the board
+  positionRight: "nIH" #As in "right-hand side"; not truth, morality, or law
+  positionLeft: "poS" #As in "left-hand side"; not political or past participle
+  landscapeBoardSide: "'echlet jIH Dop (lo' vaS)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "wab chu'/chu'Ha'" #Settings to enable/disable sound
+  overTheBoard: "'echlet Dung"
+  sharePgn: "pgn lIn"
+  shareGameUrl: 'Quj url lIn'
+  playOnline: "lIntaHvIS Quj"
+  playOffline: "lInHa'taHvIS Quj"
   bgThemeSyncWithSystem: "pat meymoH" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
