--- a/translation/dest/tt-RU/mobile-misc.yaml
+++ b/translation/dest/tt-RU/mobile-misc.yaml
@@ -1,6 +1,10 @@
 tt-RU:
   apiUnsupported: "Сезнең Lichess әсбабы версиясе бик иске! Зинһар, бушлай соңгы версиягә күтәрегез."
   apiDeprecated: "Соңгы Lichess әсбабын бушлай яңарту бар! Бу версиягә ярдәм %s -ка төшереләчәк."
+  comments: "Аңлатмалар"
+  gameInformation: "Уен турында мәгълүмат"
+  home: "Өй"
+  lastScore: "Соңгы исәп: %s"
   playerisInvitingYou: "%s сезне чакырды"
   unsupportedVariant: "Вариант %s бу версиядә булышынмый"
   notesSynchronizationHasFailed: "Искәрмәләр Lichess белән синхронизация уңышсыз калды, зинһар, соңрак карагыз."
@@ -12,3 +16,10 @@ tt-RU:
   positionRight: "Уң" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Сул" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Такта экран ягы (дала осулында)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Тавышны кабызу/сүндерү" #Settings to enable/disable sound
+  overTheBoard: "Тактада"
+  sharePgn: "PNG бүлешү"
+  shareGameUrl: 'Уен URL бүлешү'
+  playOnline: "Челтәрдә уйнау"
+  playOffline: "Челтәрсез уйнау"
+  bgThemeSyncWithSystem: "Система белән синхронлаштырырга" #Settings to synchronise background theme (dark or light) with the operating system (to support daynight automatic switch)
